# atlas

./: .gitignore  CLAUDE.md  README.md
atlas/: bootstrap.py  hooks.py  install.py  patches.txt  setup.py
bench/: README.md  atlas-route-client.py  atlas-warm-freshen.py  bench.toml  build.sh  deploy-site.py
llm/: .gitignore  CLAUDE.md  Taste.md  image-builder-design.md  proxy-design.md  proxy-handoff.md
plan/: 00-overview.md  drift.md  e2e-testing.md  phase-1-ssh-and-task.md  phase-2-digitalocean-client.md  phase-3-server-and-bootstrap.md  phase-4-image-and-sync.md  phase-5-vm-provision.md  phase-6-vm-lifecycle.md  phase-7-run-task-and-polish.md  phase-8-permissions-and-docs.md
proxy/: README.md  build.sh
scripts/: bootstrap-server.py  bootstrap-server.sh  firewall-apply.py  firewall-confirm.py  firewall-revert.py  host-pyproject.toml  migration-clone-target.py  migration-cutover-target.py  probe-image-present.sh  provision-vm.py  provision-vm.sh  pyproject.toml  start-vm.py  sync-image.sh  terminate-vm.py  vm-network-up.sh
scripts/lib/atlas/: _run.py  lvm.py  paths.py  rootfs.py  test_bootstrap.py  test_firewall.py  test_lvm.py  test_packaging.py  test_wireguard_e2e.py  tunnel.py
scripts/systemd/: atlas-mgmt-firewall.service  atlas-pool.service  firecracker-vm@.service  sshpiper.service
spec/: 01-architecture.md  02-doctypes.md  03-bootstrapping.md  03-metal-node-bootstrap.md  04-tasks.md  04-vm-lifecycle.md  05-networking.md  05-virtual-machine-lifecycle.md  06-filesystem-layout.md  06-networking.md  07-filesystem-layout.md  07-ssh-and-commands.md  08-images.md  09-roadmap.md  10-desk-ui.md  12-proxy.md  (+13 more)
(+195 files in other folders)
